MultiModuleBinaryForSourceQueryImpl reacts on changes.